# substitute

./: CMakeLists.txt  README.md  dis.h  substitute-internal.h  substitute.h  substitute_api.h  transform-dis.c
.github/workflows/: ci.yml
arm/: arch-transform-dis.inc.h  assemble.h
